...
        }
    }
    
    func updateLikeButtonState() -> UIButton {
        var updateLikeButton: UIButton
        if liked {
            updateLikeButton = createButton(title: "Unlike", imageName: "heart.fill")
            updateLikeButton.addTarget(self, action: #selector(likeButtonTapped), for: .touchUpInside)
        } else {
            updateLikeButton = createButton(title: "Like", imageName: "heart")
            updateLikeButton.addTarget(self, action: #selector(likeButtonTapped), for: .touchUpInside)
        }
        return updateLikeButton
    }
    
    func setUpButtonForMyActivities() {
        var middleButton: UIButton
        if activity.state == .closed {
            // complete button
            let completeButton = createButton(title: "Complete", imageName: "checkmark.circle")
            completeButton.addTarget(self, action: #selector(completeButtonTapped), for: .touchUpInside)
            self.completeButton = completeButton
            updateCompleteButtonState()
            middleButton = completeButton
        } else if activity.state == .open {
            // jio button
            let jioButton = createButton(title: "Jio", imageName: "sun.min")
            self.jioButton = jioButton
            jioButton.addTarget(self, action: #selector(jioButtonTapped), for: .touchUpInside)
            middleButton = jioButton
        } else {
            let completeButton = createButton(title: "Complete", imageName: "checkmark.circle")
            self.completeButton = completeButton
...
    }
    
    func setUpButtonForJoinedActivities() {
        let chatWithHostButton = createButton(title: "Chat", imageName: "message")
        self.chatWithHostButton = chatWithHostButton
        
        let joinButton = createButton(title: "Join", imageName: "person.2")
        joinButton.addTarget(self, action: #selector(joinButtonTapped), for: .touchUpInside)
        self.joinButton = joinButton
        updateJoinButtonState()
        
        let likeButton = updateLikeButtonState()
        self.likeButton = likeButton
...
        }
    }
    
    // MARK: Button method
    @objc func completeButtonTapped() {
        // display an alert
        let title = "Complete Jio"
        let msg = "This action will remove your Jio from \"Explore Tab\" and \"My Activities Tab\". Press \"OK\" to complete a Jio."
        let alertController = UIAlertController(title: title, message: msg, preferredStyle: .alert)
        let okAction = UIAlertAction(title: "OK", style: .default) { (action) in
            // change state from close to complete
            self.dataController.changeActivityState(activity: self.activity, changeTo: .completed)
            self.completeButton?.isEnabled = false
            self.completeButton?.setTitleColor(UIColor.gray, for: .disabled)
            self.completeButton?.tintColor = UIColor.gray
            // TODO: transition to leave a comment page?
...
        alertController.addAction(cancelAction)
        present(alertController, animated: true, completion: nil)
    }
    
    @objc func jioButtonTapped() {
        // display an alert
        let title = "Finalise Jio"
        let msg = "This action will remove your Jio from \"Explore Tab\". Press \"OK\" once you decide to stop looking for new participants."
        let alertController = UIAlertController(title: title, message: msg, preferredStyle: .alert)
        let okAction = UIAlertAction(title: "OK", style: .default) { (action) in
            // change state from open to close
            self.dataController.changeActivityState(activity: self.activity, changeTo: .closed)
            // create new button
...
