...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NUSJio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nT3-Ke-VaX">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="83"/>
                                        <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="65"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="NUSNET ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6BU-BN-0WE">
                                        <rect key="frame" x="0.0" y="103" width="334" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="wWb-F2-tTf"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lqC-v1-paN">
                                        <rect key="frame" x="0.0" y="173" width="334" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fki-P3-L7F">
                                        <rect key="frame" x="0.0" y="243" width="334" height="45"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="f9D-9n-wQj"/>
                                        </constraints>
                                        <state key="normal" title="Sign In"/>
                                        <connections>
                                            <action selector="signInButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jNA-20-xx6"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2H-Vg-cfd">
                                        <rect key="frame" x="0.0" y="308" width="334" height="45"/>
...
            <point key="canvasLocation" x="3663.7681159420295" y="2386.6071428571427"/>
        </scene>
        <!--Activities-->
        <scene sceneID="Bm1-U0-7zZ">
            <objects>
                <navigationController storyboardIdentifier="MyActivitiesNavigationController" id="tHF-BE-nxL" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Activities" image="sun.min" catalog="system" selectedImage="sun.min.fill" id="tuH-od-v5y"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Lup-F5-rKm">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="Ym3-2L-ahE" kind="relationship" relationship="rootViewController" id="V7T-35-Yfb"/>
...
            <point key="canvasLocation" x="3665" y="842"/>
        </scene>
        <!--Explore-->
        <scene sceneID="qmQ-MQ-l33">
            <objects>
                <navigationController id="2Cf-PM-PXD" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="1" title="Explore" image="magnifyingglass" catalog="system" selectedImage="magnifyingglass" id="9mS-Q0-dde"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aIE-kf-bDI">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="DTE-IK-Ce6" kind="relationship" relationship="rootViewController" id="djW-e8-NQ6"/>
...
